--- a/bharathuniv.css
+++ b/bharathuniv.css
@@ -88,8 +88,8 @@ top: 10px; right: 5px;
     transition: 1s;
 }
 @media(max-width: 700px){
-    .text-box h1{
-        font-size: 20px;
+    .raw{
+        flex-direction:column;
     }
 
 
