--- a/bharathuniv.css
+++ b/bharathuniv.css
@@ -87,10 +87,13 @@ top: 10px; right: 5px;
     border: 1px solid yellow;
     transition: 1s;
 }
-@media screen and (max-width: 500px){
-    .raw{
-        flex-direction:column;
-    }
+@media screen and (max-width: 700px){
+    *{
+    margin: 0;
+    padding: 0;
+
+}
+    
 
 
 }
