--- a/bharathuniv.css
+++ b/bharathuniv.css
@@ -188,8 +188,9 @@ div.register{
     margin: 12px;
 
 }
-@media screen and (max-width:1500px){
+/* @media screen and (max-width:1500px){
     body{
         display:none;
     }
 }
+ */
