--- a/bharathuniv.css
+++ b/bharathuniv.css
@@ -142,7 +142,7 @@ h3{
     margin: 2px;
 }
 .pyar{
-    background-color: blue;
+    background-color: green;
     border: 2px solid black;
 }
 .facilitie{
