--- a/bharathuniv.css
+++ b/bharathuniv.css
@@ -185,7 +185,7 @@ div.register{
 .hyan{
     padding: 13px;
     background-image: url("img/bodypicbharath.jpg");
-    border: 2px solid red;
+    border: 2px solid green;
     margin: 12px;
 
 }
